--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -127,7 +127,20 @@
     "sort_by_capacity": "Capacity",
     "sort_by_clan": "Clan",
     "sort_by_group": "Group",
-    "delete": "Delete"
+    "delete": "Delete",
+    "compare": "Compare"
+  },
+  "deck_comparison": {
+    "title": "Compare Deck",
+    "enter_deck_url": "Enter Deck URL",
+    "enter_deck_url_hint": "Paste a link to any deck to compare",
+    "or_select_recent": "Or select from recently visited decks",
+    "comparing_with": "Comparing with",
+    "comparison_hint": "Green shows cards added to current deck, red shows cards removed",
+    "no_differences": "Both decks are identical",
+    "comparison_load_error": "Could not load comparison deck",
+    "loading_comparison": "Loading comparison...",
+    "close_comparison": "Close comparison"
   },
   "deck_builder": {
     "deck_not_exists": "Deck doesn't exists. Please try again later.",
@@ -137,7 +150,7 @@
     "deck_saved": "Deck saved successfully! You can now share it with your friends!!",
     "link_copied": "Link copied to clipboard",
     "delete_title": "Delete this deck?",
-    "delete_message": "Deck will be deleted. The deck will be available for 60 days after deletion to be restored.",
+    "delete_message": "<p>It will be kept for 60 days and can be restored during that time.</p><p>If you permanently delete it, <strong>it cannot be recovered.</strong></p>",
     "delete_successful": "Deck deleted",
     "name": "Name",
     "description": "Description",
@@ -231,7 +244,8 @@
     "show_filters": "Show filters",
     "show_more": "Show more",
     "price_cheapest": "Price: Lowest",
-    "price_expensive": "Price: Highest"
+    "price_expensive": "Price: Highest",
+    "deck_preview": "Deck Preview"
   },
   "draw_cards": {
     "title": "Draw Cards",
@@ -316,7 +330,7 @@
     "my_decks": "My Decks",
     "bookmarks": "My Bookmarks",
     "public_profile": "Public Profile",
-    "profile_settings": "Profile Settings",
+    "settings": "Settings",
     "logout": "Logout",
     "theme": "Theme",
     "notifications": "Notifications",
@@ -441,6 +455,7 @@
     "ok": "Ok",
     "cancel": "Cancel",
     "delete": "Delete",
+    "delete_permanently": "Delete Permanently",
     "import": "Import",
     "close": "Close",
     "loading": "Loading",
@@ -474,7 +489,7 @@
     "player": "Player"
   },
   "user_profile": {
-    "settings": "Profile Settings",
+    "profile_settings": "Profile Settings",
     "profile_image_alert": " For profile image we use <a class='fw-bold' href='https://gravatar.com/profiles/edit' target='_blank'>Gravatar</a>. Your Gravatar is a picture and public profile that follows you from place to place when you do things like comment or post on a blog.",
     "display_name": "Display Name",
     "profile_image": "Profile Image URL (Override Gravatar)",
@@ -485,8 +500,9 @@
     "password_requirements": "Password requirements",
     "password_requirements_detail": "To create a new password, you have to meet all of the following requirements:",
     "password_not_same": "Can't be the same as a previous password",
-    "save": "Save Profile",
-    "error": "An error occurred while updating your settings."
+    "save": "Save",
+    "error": "An error occurred while updating your settings.",
+    "security_settings": "Security Settings"
   },
   "user_public_profile": {
     "deck": "deck",
