chore: update version to 2.65.1 and enhance deck metagame card styling and translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -952,7 +952,7 @@
     "description": "Description",
     "enabled": "Enabled",
     "decks_with_metagame": "Discover decks",
-    "meta": "Meta <strong>{{percentage}}%</strong> ({{count}} decks)",
+    "meta": "Meta {{percentage}}% of all decks ({{count}} in this period)",
     "delete_title": "Delete this metagame?",
     "delete_message": "Metagame will be deleted. This action cannot be undone.",
     "show_from_last": "Show the metagame from",
